--- a/poll-app/package.json
+++ b/poll-app/package.json
@@ -13,6 +13,7 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-redux": "^7.2.3",
+    "react-router": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
